--- a/frontend/src/assets/scss/custom.scss
+++ b/frontend/src/assets/scss/custom.scss
@@ -114,3 +114,7 @@ $border-radius: 1rem;
     border-color: #86b7fe;
     box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
+
+.master{
+    flex: 1
+}
